// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Button component with icon matches snapshot 1`] = `
<Styled(button)
  onClick={[Function]}
  padded={true}
  tabIndex={0}
  type="button"
>
  Click Me
  <Icon
    icon="image.jpg"
    padded={true}
  />
</Styled(button)>
`;

exports[`Button component matches snapshot 1`] = `
<Styled(button)
  onClick={[Function]}
  padded={false}
  tabIndex={0}
  type="button"
>
  Click Me
</Styled(button)>
`;
